# pyrpl

./: .deploy_to_sourceforge.py  .gitignore  .readthedocs.yml  .travis.yml  .yourbase.yml  .yourbase_python2.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  Jenkinsfile.alt  LICENSE  MANIFEST  Makefile  README.md  README.rst  THANKS.txt  TODO.txt  Untitled.ipynb  Untitled1.ipynb  __init__.py  abc.py  appveyor.yml  autocorrectpep8_script.sh  azure-pipelines.yml  environment.yml  environment_pyrpl.yml  iir.py  index.html  jenkins_global_config.yml  lockbox.py  py3.yml  pyrpl.py  pyrpl.spec  pyrpl3.yml  pyrpl36.yml  readthedocs_requirements.txt  redpitaya.py  redpitaya_modules.py  (+9 more)
.docker/: all_python_build.sh  build.sh  run-27.sh  run-3.sh  run-35.sh  run-36.sh  run.sh  setup_jenkins.sh
doc/: .coveragerc  Tutorial.ipynb  Untitled0.ipynb  Untitled1.ipynb  launch_notebook.bat  lockbox_gui.pptx  tutorial.ipynb
docs/: 1.3  index.html  make.bat  makefile  requirements.txt
fpga/: README.md  settings.sh
ignore_these/: test_attribute.py  test_load_save.py  test_ownership.py  test_proxyproperty.py  test_redpitaya.py  test_registers.py
monitor_server/: monitor_server
pyrpl/: __init__.py  __main__.py  _version.py  acquisition_manager.py  acquisition_module.py  async_utils.py  async_utils_old.py  attribute_widgets.py  attributes.py  attributes.uml  bijection.py  bodefit.py  curvedb.py  curves10.p  errors.py  fitting.py  global_config.py  iir.py  interferometer_lock.py  lockbox.py  lockbox_simple.py  memory.py  mode_finder.py  model.py  modules.py  (+22 more)
(+547 files in other folders)
