[nosetests]
verbosity=3
nocapture=1
nologcapture=1
#logging-level=info  # logging-level is set in config/nosetests_source.yml
with-coverage=1
cover-package=pyrpl
#cover-xml=1
cover-xml-file=unit_test_coverage.xml
with-xunit=1
xunit-file=unit_test_results.xml

[metadata]
description-file = README.md

[bdist_wheel]
universal=1
