[nosetests]
verbosity=3
#nocapture=1  # rather have stdout in xunit.xml
#nologcapture=1  # rather have it in xunit.xml
#logging-level=info  # logging-level is set in config/nosetests_source.yml
#with-isolation=1  # still to be tested
detailed-errors=1
with-coverage=1
cover-package=pyrpl
cover-xml=1
cover-xml-file=unit_test_coverage.xml
with-xunit=1
xunit-file=unit_test_results.xml

[metadata]
description-file = README.md

[bdist_wheel]
universal=1
